# poetry-github-actions-example

./: README.md  main.py  pyproject.toml
.github/workflows/: linters.yml  tests.yml
