[tool.poetry]
name = "poetry-sample-app"
version = "0.1.0"
description = ""
authors = ["Richard <richard@stromer.org>"]
readme = "README.md"
packages = [{include = "poetry_sample_app"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
