[tool.poetry]
name = "poetry-github-actions-example"
version = "0.1.0"
description = ""
authors = ["Richard <richard@stromer.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.8.2"
pandas = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.303"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
